--- a/site40Bierges/api/vercel.json
+++ b/site40Bierges/api/vercel.json
@@ -12,9 +12,8 @@
       "methods": ["GET", "POST", "OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin" : "",
-        "Access-Control-Allow-Headers" : "X-Requested-With,content-type",
+        "Access-Control-Allow-Headers" : "https://react-app-two-topaz.vercel.app",
         "Access-Control-Allow-Credentials" : "true"
       }
     }]
   }
-  
