--- a/site40Bierges/api/package.json
+++ b/site40Bierges/api/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon --exec npm run start"
+    "start": "nodemon index.js"
   },
   "author": "Stiers Nathan",
   "license": "ISC",
